; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp.c_necp_output_bypass.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp.c_necp_output_bypass.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32 }

@necp_pass_loopback = common dso_local global i64 0, align 8
@necp_pass_keepalives = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mbuf*)* @necp_output_bypass to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @necp_output_bypass(%struct.mbuf* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mbuf*, align 8
  store %struct.mbuf* %0, %struct.mbuf** %3, align 8
  %4 = load i64, i64* @necp_pass_loopback, align 8
  %5 = icmp sgt i64 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %8 = call i64 @necp_is_loopback(i32* null, i32* null, i32* null, %struct.mbuf* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %6
  store i32 1, i32* %2, align 4
  br label %25

11:                                               ; preds = %6, %1
  %12 = load i64, i64* @necp_pass_keepalives, align 8
  %13 = icmp sgt i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %11
  %15 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %16 = call i64 @necp_get_is_keepalive_from_packet(%struct.mbuf* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %14
  store i32 1, i32* %2, align 4
  br label %25

19:                                               ; preds = %14, %11
  %20 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %21 = call i64 @necp_is_intcoproc(i32* null, %struct.mbuf* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %19
  store i32 1, i32* %2, align 4
  br label %25

24:                                               ; preds = %19
  store i32 0, i32* %2, align 4
  br label %25

25:                                               ; preds = %24, %23, %18, %10
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i64 @necp_is_loopback(i32*, i32*, i32*, %struct.mbuf*) #1

declare dso_local i64 @necp_get_is_keepalive_from_packet(%struct.mbuf*) #1

declare dso_local i64 @necp_is_intcoproc(i32*, %struct.mbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
